fix scrollbar overflow

--- a/styling/markdown-styling.css
+++ b/styling/markdown-styling.css
@@ -26,7 +26,7 @@ blockquote::after {
 .highlighter-rouge {
   background-color: var(--card-color);
   border-radius: 0.5rem;
-  width: min-content;
+  overflow: hidden;
   padding: 0.1rem;
 }
 
